2001-12-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch]: removed, moved all functions to gda-row

	* gda-server-recordset.c (gda_server_recordset_get_connection): new
	function

	* gda-row.c (gda_row_attributes_new): new function
	(gda_row_attributes_get_field): new function
	(gda_field_attributes_get_defined_size): new function
	(gda_field_attributes_set_defined_size): new function
	(gda_field_attributes_get_name): new function
	(gda_field_attributes_set_name): new function
	(gda_field_attributes_get_scale): new function
	(gda_field_attributes_set_scale): new function
	(gda_field_attributes_get_gdatype): new function
	(gda_field_attributes_set_gdatype): new function
	(gda_field_*): moved from gda-field.[ch]

2001-12-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-parameter.c (gda_parameter_list_to_corba): new function

	* gda-server-connection.c (gda_server_connection_notify_action):
	don't build the CORBA sequence by hand, but use the new
	gda_parameter_list_to_corba function

	* gda-recordset (gda_recordset_new): added a GNOME_Database_Recordset
	parameter, since GdaRecordset's shouldn't be created without a
	valid CORBA object

	* gda-connection.c (gda_connection_execute_command): implemented

2001-12-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-parameter.c (gda_parameter_list_get_length): return 0 instead
	of -1 if the parameter is NULL

2001-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (gda_server_connection_notify_action):
	disable, as it is not working right now

	* gda-parameter.[ch] (gda_parameter_list_get_length): new function

	* gda-client.[ch]: added "error" signal to GdaClient class

	* gda-connection.[ch]: added "error" signal to GdaConnection class

	* gda-error.c (gda_error_list_from_exception):
	(gda_error_list_to_exception): fixed crashes

	* gda-config.c: replaced use of GConfEngine with GConfClient to
	avoid problems with GConfEngine/GConfClient (from libgnome) mix
	problems
